WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215075
REGRESSION (
r264170
): fast/events/touch/ios/long-press-on-image.html times out
https://bugs.webkit.org/show_bug.cgi?id=215075
Summary
REGRESSION (r264170): fast/events/touch/ios/long-press-on-image.html times out
Wenson Hsieh
Reported
2020-08-02 14:01:26 PDT
<
rdar://problem/66294637
>
Attachments
Patch
(10.48 KB, patch)
2020-08-02 14:56 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Fix tvOS/watchOS builds
(10.51 KB, patch)
2020-08-03 10:29 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-08-02 14:56:47 PDT
Comment hidden (obsolete)
Created
attachment 405812
[details]
Patch
Wenson Hsieh
Comment 2
2020-08-03 10:29:47 PDT
Created
attachment 405849
[details]
Fix tvOS/watchOS builds
Wenson Hsieh
Comment 3
2020-08-03 13:15:50 PDT
Comment on
attachment 405849
[details]
Fix tvOS/watchOS builds Thanks for the review!
EWS
Comment 4
2020-08-03 13:29:22 PDT
Committed
r265211
: <
https://trac.webkit.org/changeset/265211
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405849
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug