REGRESSION (r264170): fast/events/touch/ios/long-press-on-image.html times out https://bugs.webkit.org/show_bug.cgi?id=215075 <rdar://problem/66294637>

Reviewed by Megan Gardner.

Tools:

This test started timing out after r264170, due to the `if (self.showingContextMenu)` early return added inside
`-[TestRunnerWKWebView _didShowContextMenu]`. If this test is run after another test that attempts to show a
context menu but does not dismiss it, we will begin the test in a state where `showingContextMenu` is already
set to `YES`, which means that `didShowContextMenuCallback` will never be invoked.

To address this, force any context menu interactions on `WKContentView` to dismiss between tests. See below for
more details.

* WebKitTestRunner/cocoa/TestRunnerWKWebView.h:
* WebKitTestRunner/cocoa/TestRunnerWKWebView.mm:
(-[TestRunnerWKWebView immediatelyDismissContextMenuIfNeeded]):

When resetting state between tests, forcibly dismiss any context menus that were shown while running the
previous test and reset `showingContextMenu` back to `NO`.

(-[TestRunnerWKWebView contentView]):

Drive-by refactoring: add a readonly helper property to grab the WKWebView's content view for testing purposes,
and use this property instead of directly calling `-valueForKeyPath:` in a few places (see below).

* WebKitTestRunner/ios/PlatformWebViewIOS.mm:
(WTR::PlatformWebView::windowSnapshotImage):
* WebKitTestRunner/ios/TestControllerIOS.mm:
(WTR::TestController::notifyDone):
(WTR::TestController::platformResetStateToConsistentValues):
* WebKitTestRunner/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptControllerIOS::platformContentView const):
(WTR::UIScriptControllerIOS::calendarType const):

LayoutTests:

Drive-by fix: this helper function had intended to use the `didDismissContextMenuCallback` property to register
callbacks for context menu dismissal, but instead, it sets a new property (`didHideContextMenuCallback`) on
`UIScriptController` that doesn't actually have any effect. The purpose of doing this is to make it safe to
invoke `waitForInputSessionToDismiss()` in the middle of the context menu dismissal animation when dismissing
date pickers on iOS. While it seems that none of our existing tests currently depend on this behavior in order
to pass, it still seems important to fix to avoid timing out when using this helper method in the future.

* resources/ui-helper.js:
(window.UIHelper.waitForInputSessionToDismiss.return.new.Promise.):
(window.UIHelper.waitForInputSessionToDismiss.return.new.Promise):
(window.UIHelper.waitForInputSessionToDismiss):


Canonical link: https://commits.webkit.org/227897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265211 268f45cc-cd09-0410-ab3c-d52691b4dbfc